--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,11 @@
   }
 
   body {
-    @apply relative text-white bg-lime-950;
+    @apply relative text-white;
+    background-image: url('https://images.hdqwalls.com/download/dark-night-mountains-minimalist-4k-o4-2560x1600.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   button {
